force-app/main/default/objects/APXTConga4__Conga_Solution_Template__c/APXTConga4__Conga_Solution_Template__c.object-meta.xml
<CustomObject>
    <label>Conga Solution Template</label>
    <nameField>
        <displayFormat>CST-{00000}</displayFormat>
        <label>Conga Solution Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conga Solution Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>