force-app/main/default/objects/APXTConga4__Conga_Solution_Template__c/fields/APXTConga4__Conga_Template__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Conga_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Conga Template</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Conga Solution Templates</relationshipLabel>
    <relationshipName>Conga_Solution_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>