force-app/main/default/objects/APXTConga4__Conga_Solution_Template__c/fields/APXTConga4__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Sort_Order__c</fullName>
    <label>Sort Order</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>