force-app/main/default/objects/APXTConga4__Conga_Solution_Template__c/fields/APXTConga4__Template_Name__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Template_Name__c</fullName>
    <formula>APXTConga4__Conga_Template__r.APXTConga4__Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Name</label>
    <type>Text</type>
</CustomField>